--- a/css/app.scss
+++ b/css/app.scss
@@ -8,7 +8,7 @@ $name-size: 5em;
 $summary-size: 1.5em;
 
 body {
-  background-image: url("../img/bg2.jpg");
+  background-image: url("../img/bg2-low.jpg");
   background-size: 100% 100%;
 }
 .container-fluid {
