--- a/css/app.scss
+++ b/css/app.scss
@@ -29,6 +29,12 @@ body {
   margin-top: 1%;
   margin-right: 3%;
 }
+
+@include media-breakpoint-down(sm) {
+  body {
+    background: grey none;
+  }
+}
 @include media-breakpoint-down(md) {
   .container-fluid {
     display: block !important;
@@ -49,7 +55,7 @@ body {
     display: none;
   }
   .content-holder {
-    margin-right: 0;
+    margin-right: 0 !important;
     align-self: center!important;
     * {
       text-align: center;
@@ -168,13 +174,6 @@ body {
   transform: scale(1.2);
 }
 
-@include media-breakpoint-down(sm) {
-  body {
-    width:100%;
-    height: 100%;
-    background: grey none;
-  }
-  .A {
-    background-color: red;
-  }
+.footer p{
+  margin-bottom: .2em;
 }
